# hello-cmake

./: CMakeLists.txt  main.c
